# njvm

./: .gitignore  CMakeLists.txt  README.md  debug.h  njvm.c
Programme/: prog1.2.asm  prog1.3.asm
aufgaben/: aufgaben.adoc  aufgaben.html
aufgaben/a-pre/: aufgabe.adoc
aufgaben/a0/: aufgabe.adoc
aufgaben/a1/: aufgabe.adoc
aufgaben/a2/: aufgabe.adoc
aufgaben/a3/: aufgabe.adoc
aufgaben/a4/: aufgabe.adoc  index.adoc
aufgaben/a5/: aufgabe.adoc
aufgaben/a6/: aufgabe.adoc
aufgaben/a7/: aufgabe.adoc
aufgaben/a8/: aufgabe.adoc
